fix own regression in 2.66 [#34610] Text editor: Syntax highlighting freezes